@@ -184,7 +184,7 @@ the public iOS SDK. See <https://webkit.org/b/179167>. */
 #if PLATFORM(WATCHOS)
 
 #if !defined(ENABLE_PROXIMITY_NETWORKING)
-#if !TARGET_OS_SIMULATOR
+#if !TARGET_OS_SIMULATOR && __WATCH_OS_VERSION_MIN_REQUIRED < 60000
 #define ENABLE_PROXIMITY_NETWORKING 1
 #endif
 #endif
